--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
+APP_KEY=base64:2adCEvsZGVe8sjAn8eolhWvDA5ucFb8G/i//PeouI/E=
 
 DB_HOST=localhost
 DB_DATABASE=u629143549_forge
