pembuatan menu jadwal dll untuk dosen

--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ APP_DEBUG=true
 APP_KEY=base64:2adCEvsZGVe8sjAn8eolhWvDA5ucFb8G/i//PeouI/E=
 
 DB_HOST=localhost
-DB_DATABASE=forge
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u629143549_forge
+DB_USERNAME=u629143549_root
+DB_PASSWORD=matakuliah
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
